--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,6 +21,7 @@ kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test-junit5" }
 kotlinLogging = { module = "io.github.oshai:kotlin-logging-jvm", version.ref = "kotlinLogging" }
 
 spring-boot-devtools = { module = "org.springframework.boot:spring-boot-devtools" }
+spring-boot-starter-actuator = { module = "org.springframework.boot:spring-boot-starter-actuator" }
 spring-boot-starter-web = { module = "org.springframework.boot:spring-boot-starter-web" }
 spring-boot-starter-test = { module = "org.springframework.boot:spring-boot-starter-test" }
 spring-dotenv = { module = "me.paulschwarz:spring-dotenv", version.ref = "springDotenv" }
@@ -32,6 +33,7 @@ api = [
   "kotlin-stdlib",
   "kotlin-reflect",
   "kotlinLogging",
+  "spring-boot-starter-actuator",
   "spring-boot-starter-web"
 ]
 
