chore: add datasource connection config

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,10 @@
+### Database ###
+MY_DB_HOST=localhost
+MY_DB_PORT=5432
+MY_DB_NAME=mysolution
+MY_DB_USERNAME=
+MY_DB_PASSWORD=
+
 ### Web ###
 MY_ADDRESS=0.0.0.0
 MY_PORT=8443
