--- a/.github/workflows/kotlin-with-gradle.yml
+++ b/.github/workflows/kotlin-with-gradle.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Gradle wrapper Permission Change
         run: chmod +x gradlew
       - name: Build
-        run: ./gradlew build --no-daemon -x test
+        run: ./gradlew build --no-daemon -x test -x koverVerify
   test:
     runs-on: ubuntu-latest
     needs:
